testsuite/tests/grammar/invalid_lexers/token_action_3.lkt
from common import Example

lexer foo_lexer {
    @text(bar=true) Example <- "example"
}
